Ticket #1338: Fixing z-index issue on navigation dropdowns.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -6123,6 +6123,7 @@ html body .livefyre-wrapper {
 #nav-media-form {
   width: 366px;
   overflow-y: scroll;
+  z-index: 900;
 }
 #nav-media-form iframe {
   width: 100%;
@@ -6711,7 +6712,6 @@ nav[role="navigation"] .nav {
   display: inline-block;
   clear: none;
   position: relative;
-  z-index: 1;
   background: #262626;
 }
 nav[role="navigation"] .nav > div {
@@ -6722,7 +6722,6 @@ nav[role="navigation"] .nav > div {
   display: inline-block;
   clear: none;
   position: relative;
-  z-index: 1;
   background: #262626;
 }
 nav[role="navigation"] .nav > div h2 {
@@ -6731,7 +6730,6 @@ nav[role="navigation"] .nav > div h2 {
   display: inline-block;
   float: right;
   position: relative;
-  z-index: 901;
   -webkit-transition-property: color;
   -moz-transition-property: color;
   -o-transition-property: color;
@@ -6797,7 +6795,6 @@ nav[role="navigation"] .nav > a.btn, nav[role="navigation"] .nav > li {
   display: inline-block;
   float: right;
   position: relative;
-  z-index: 901;
   -webkit-transition-property: color;
   -moz-transition-property: color;
   -o-transition-property: color;
@@ -6903,7 +6900,6 @@ nav[role="navigation"] #user-menu .dropdown-menu {
   display: inline-block;
   float: right;
   position: relative;
-  z-index: 901;
   -webkit-transition-property: color;
   -moz-transition-property: color;
   -o-transition-property: color;
